--- a/index.html
+++ b/index.html
@@ -13,5 +13,29 @@
   <p>Fusce consectetur quam in pulvinar tincidunt. Nullam maximus arcu velit, non ullamcorper ante laoreet eu. In vestibulum cursus facilisis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis volutpat placerat convallis. Aliquam luctus aliquam eros, ut aliquam libero porttitor id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus ut ante porta, hendrerit ligula vitae, dapibus nunc. Duis tristique lectus in elementum accumsan. Sed imperdiet rutrum blandit. Vestibulum vel suscipit nulla.</p>
   <p>Nunc sit amet gravida urna, nec interdum ante. Curabitur malesuada tellus ligula, sed varius justo scelerisque ut. Donec tincidunt felis ac efficitur tristique. Nullam tempor arcu id urna tempor suscipit. Aenean vel est sed massa gravida tincidunt. Nunc quis dolor nec odio volutpat sodales id egestas nisl. Nam vestibulum leo leo, sit amet consectetur ligula elementum ac. In nec nulla vel sapien maximus dignissim sed ut ipsum.</p>
   <p>Vivamus eleifend mauris dapibus, hendrerit urna ut, efficitur est. Quisque id eros ultricies, accumsan diam a, dapibus neque. Proin egestas lacinia felis non scelerisque. Phasellus suscipit orci consequat consequat feugiat. Quisque vel augue lacus. Sed nec sagittis massa, in condimentum turpis. Ut fringilla efficitur molestie. Nam quis est in odio dictum finibus eget consectetur ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus ullamcorper nibh ut diam dictum tincidunt.</p>
+
+  <table border="1">
+    <tr>
+      <td>git status </td>
+      <td>Enumera todos los archivos nuevos o modificados que se deben confirmar</td>
+    </tr>
+    <tr>
+      <td>git diff</td>
+      <td>Muestra las diferencias de archivos que no se han enviado aún al
+        área de espera</td>
+    </tr>
+    <tr>
+      <td>git init [project-name]</td>
+      <td>Crea un nuevo repositorio local con el nombre especificado</td>
+    </tr>
+    <tr>
+      <td>git clone [url]</td>
+      <td>Descarga un proyecto y toda su historia de versión</td>
+    </tr>
+    <tr>
+      <td>git branch</td>
+      <td>Enumera todas las ramas en el repositorio actual</td>
+    </tr>
+  </table>
 </body>
 </html>
